--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -33,6 +33,14 @@ input, textarea, button, select {font: inherit;}
 // end
 
 // START
+.side-bar {
+  height: 900px;
+
+  .bg-secondary-yellow > div {
+    flex-grow: 1; //? note the use of this brutha...
+  }
+}
+
 .dashboard-options {
   margin-left: 25%;
 }
@@ -48,4 +56,28 @@ img {
     transform: rotate(270deg);
   }
   
+}
+
+header {
+  box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
+
+  .search-bar {
+    flex-grow: 1; //? means as a flex-item take width of 100%! would be using its bootstrap class equivalence now.
+    border-radius: 24px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  input {
+    outline: none;
+    border: none;
+    
+    &:where(:focus, :hover) {
+      outline: none;
+      border: none;
+    }
+  }
+
+  > div > div {
+    cursor: pointer;
+  }
 }
