--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -7,6 +7,7 @@ $project-theme-colours: (
   "secondary-blue-1": #5098FF,
   "main-light-blue": #DDE2FF,
   "primary-grey": #F7F7F7,
+  "dark-grey": #4F5360,
   "dark-shade": #191919
 );
 
@@ -23,6 +24,7 @@ html, body {
   --secondary-blue-1: #5098FF;
   --main-light-blue: #DDE2FF;
   --primary-grey: #F7F7F7;
+  --dark-grey: #4F5360;
   --dark-shade: #191919;
 }
 
@@ -44,6 +46,13 @@ input, textarea, button, select {font: inherit;}
   place-items: center;
 }
 
+.cursor-pointer {cursor: pointer;}
+
+.fs-7 {font-size: 0.875rem;}
+
+.fs-8 {font-size: 0.75rem;}
+
+.fs-9 {font-size: 0.625rem;}
 //* end
 
 // START
@@ -53,7 +62,7 @@ input, textarea, button, select {font: inherit;}
 }
 
 .side-bar {
-  flex: 0 0 auto; /*? Prevent the fixed item from growing or shrinking */
+  flex: 0 0 auto; //? Prevent the fixed item from growing or shrinking
   position: sticky;
   top: 0;
   height: 100vh;
@@ -107,8 +116,45 @@ header {
 }
 
 main {
-  .blue-right path {
-    stroke: var(--primary-blue-1);
-  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 200px) 296px;
+    grid-template-rows: repeat(5, 85.333px);
 
+    > div {
+      background-color: white;
+      border-radius: 16px;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .main-subjects {
+      grid-row: span 3;
+    }
+
+    .calendar {
+      grid-row: span 4;
+
+      .calendar-header {
+        font-family: "Rubik", sans-serif;
+      }
+
+      .calendar-time {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      .calendar-day {
+        grid-template-columns: repeat(7, 1fr);
+        font-family: "Lato", sans-serif;
+      }
+      
+      .calendar-dates {
+        grid-template-columns: repeat(7, 1fr);
+        font-family: "Lato", sans-serif;
+        
+        > div:is(.bg-secondary-yellow) {
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
