--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -9,6 +9,7 @@ $project-theme-colours: (
   "main-light-blue": #DDE2FF,
   "secondary-grey": #F3F4F9,
   "primary-grey": #F7F7F7,
+  "dark-grey-2": #808080,
   "dark-grey": #4F5360,
   "dark-shade": #191919
 );
@@ -210,6 +211,26 @@ main {
 
         @media (min-width: 576px) {
           width: 100%;
+        }
+      }
+    }
+  }
+
+  .grid-container-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 16px;
+
+    .frames {
+      background-color: white;
+      border-radius: 16px;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+      .the-stats {
+        color: #7B8194;
+
+        .each-one > div {
+          flex: 1;
         }
       }
     }
